--- a/lang/el.json
+++ b/lang/el.json
@@ -103,6 +103,7 @@
         "CustomLogoHelpText": "Μπορείτε να προσαρμόσετε το λογότυπο του Piwik που θα εμφανίζεται στο περιβάλλον εργασίας του χρήστη και στις αναφορές αλληλογραφίας.",
         "DevelopmentProcess": "Παρόλο που η %sδιαδικασία μας ανάπτυξης%s περιλαμβάνει χιλιάδες αυτοματοποιημένων ελέγχων, οι χρήστες δοκιμαστές παίζουν ένα κύριο ρόλο στο να πετύχουμε την \"Χωρίς σφάλματα πολιτική\" του Piwik.",
         "EmailServerSettings": "Ρυθμίσεις διακομιστή ηλεκτρονικής αλληλογραφίας",
+        "FaviconUpload": "Επιλέξτε ένα favicon για ανέβασμα",
         "ForBetaTestersOnly": "Για χρήστες δοκιμαστές μόνο",
         "ImageTracking": "Παρακολούθηση Εικόνων",
         "ImageTrackingIntro1": "Όταν ένας επισκέπτης έχει απενεργοποιήσει την JavaScript ή όταν η JavaScript δεν μπορεί να χρησιμοποιηθεί, μπορείτε να χρησιμοποιήσετε ένα σύνδεσμο εντοπισμού εικόνων για να παρακολουθείτε τους επισκέπτες.",
@@ -153,6 +154,7 @@
         "PiwikIsInstalledAt": "Το Piwik εγκαταστάθηκε στο",
         "PluginDescription": "Περιοχή διαχείρισης του Piwik.",
         "PluginSettingChangeNotAllowed": "Δεν επιτρέπεται να αλλάξετε την τιμή της ρύθμισης \"%s\" στο πρόσθετο \"%s\"",
+        "PluginSettingReadNotAllowed": "Απαγορεύεται να δείτε την τιμή της ρύθμισης \"%s\" στο πρόσθετο \"%s\"",
         "PluginSettings": "Ρυθμίσεις πρόσθετου",
         "PluginSettingsIntro": "Εδώ μπορείτε να αλλάξετε τις ρυθμίσεις των παρακάτω πρόσθετων από τρίτους:",
         "PluginSettingsValueNotAllowed": "Η τιμή για το πεδίο \"%s\" στο πρόσθετο \"%s\" δεν είναι επιτρεπτή",
@@ -1041,7 +1043,6 @@
     },
     "Installation": {
         "CollaborativeProject": "Το Piwik είναι ένα συνεργατικό έργο, δημιουργημένο με αγάπη από ανθρώπους από όλο τον κόσμο.",
-        "CommunityNewsletter": "Ενεργοποίηση αλληλογραφίας για ενημερώσεις της κοινότητας (νέα πρόσθετα, νέα χαρακτηριστικά, κλπ.)",
         "ConfigurationHelp": "Οι ρυθμίσεις του Piwik φαίνεται ότι έχουν πρόβλημα. Μπορείτε να απομακρύνετε το config\/config.ini.php και να συνεχίσετε την εγκατάσταση ή διορθώστε τις ρυθμίσεις σύνδεσης της βάσης δεδομένων.",
         "ConfirmDeleteExistingTables": "Θέλετε σίγουρα να διαγράψετε τους πίνακες: %s από τη βάση δεδομένων σας; ΠΡΟΕΙΔΟΠΟΙΗΣΗ: ΤΑ ΔΕΔΟΜΕΝΑ ΑΠΟ ΑΥΤΟΥΣ ΤΟΥ ΠΙΝΑΚΕΣ ΔΕΝ ΘΑ ΜΠΟΡΟΥΝ ΝΑ ΑΝΑΚΤΗΘΟΥΝ!",
         "Congratulations": "Συγχαρητήρια",
@@ -1077,6 +1078,7 @@
         "NfsFilesystemWarningSuffixAdmin": "Αυτό σημαίνει ότι το Piwik θα είναι εξαιρετικά αργό, όταν χρησιμοποιεί το αρχείο συνεδρίες σε αρχεία (file based sessions).",
         "NfsFilesystemWarningSuffixInstall": "Οι συνεδρίες αρχείων (file based sessions) στο NFS είναι εξαιρετικά αργές, έτσι το Piwik θα χρησιμοποιήσει συνεδρίες με βάση δεδομένων. Εάν έχετε πολλούς ταυτόχρονους χρήστες, μπορεί να χρειαστεί να αυξήσετε τον μέγιστο αριθμό συνδέσεων προς τον εξυπηρετητή της βάσης δεδομένων.",
         "NoConfigFound": "Το αρχείο ρυθμίσεων του Piwik δεν βρέθηκε και προσπαθείτε να ανοίξετε μια σελίδα Piwik.<br \/><b>  » Μπορείτε να <a href=\"index.php\">εγκαταστήσετε το Piwik τώρα<\/a><\/b><br \/><small>αν έχετε εγκαταστήσει το Piwik προηγούμενα και έχετε κάποιους πίνακες στη βάση δεδομένων σας, μην ανησυχείτε, μπορείτε να χρησιμοποιήσετε ξανά τους ίδιους πίνακες και να διατηρήσετε τα υπάρχοντα δεδομένα σας!<\/small>",
+        "NotSupported": "δεν υποστηρίζεται",
         "Optional": "Προαιρετικά",
         "Password": "Κωδικός πρόσβασης",
         "PasswordDoNotMatch": "ο κωδικός δεν ταιριάζει",
@@ -1087,7 +1089,6 @@
         "Requirements": "Απαιτήσεις Piwik",
         "RestartWebServer": "Μετά από αυτή την αλλαγή, επανεκκινήστε τον διακομιστή σας.",
         "ReusingTables": "Γίνεται χρήση των Πινάκων",
-        "SecurityNewsletter": "Ενεργοποίηση αλληλογραφίας για τις βασικές αναβαθμίσεις του Piwik και ειδοποιήσεις ασφάλειας",
         "SeeBelowForMoreInfo": "Δείτε παρακάτω για περισσότερες πληροφορίες.",
         "SetupWebsite": "Ρύθμιση μιας ιστοσελίδας",
         "SetupWebsiteError": "Συνέβη ένα σφάλμα κατά της προσθήκη της ιστοσελίδας",
@@ -1103,6 +1104,8 @@
         "SystemCheck": "Έλεγχος συστήματος",
         "SystemCheckAutoUpdateHelp": "Σημείωση: Η αναβάθμιση με Ένα Πάτημα του Piwik απαιτεί δικαιώματα εγγραφής στο φάκελο Piwik και στα περιεχόμενά του.",
         "SystemCheckCreateFunctionHelp": "Το Piwik χρησιμοποιεί ανώνυμες συναρτήσεις για ανακλήσεις.",
+        "SystemCheckCronArchiveProcess": "Cron αρχειοθέτησης",
+        "SystemCheckCronArchiveProcessCLI": "Διαχείριση εργασιών από CLI",
         "SystemCheckDatabaseHelp": "Το Piwik απαιτεί είτε την επέκταση mysqli ή τις επεκτάσεις PDO και pdo_mysql.",
         "SystemCheckDebugBacktraceHelp": "Η εντολή View::factory δεν θα μπορεί να δημιουργήσει προβολές για το κληθέν πρότυπο.",
         "SystemCheckError": "Συνέβη ένα σφάλμα – πρέπει να διορθωθεί πριν συνεχίσετε",
@@ -1334,6 +1337,7 @@
     "MultiSites": {
         "Evolution": "Πρόοδος",
         "LoadingWebsites": "Γίνεται φόρτωση των ιστοτόπων",
+        "Pagination": "%s - %s από %s",
         "PluginDescription": "Προβάλει ενεργή περίληψη\/στατιστικά πολλών ιστοσελίδων. Προς το παρόν διατηρείτε ως πρόσθετο του πυρήνα του Piwik.",
         "TopLinkTooltip": "Σύγκριση στατιστικών Ιστού για όλες τις ιστοσελίδες σας."
     },
@@ -1565,6 +1569,7 @@
         "ThisSegmentIsVisibleTo": "Το τμήμα αυτό είναι ορατό σε:",
         "VisibleToAllUsers": "όλους τους χρήστες",
         "VisibleToMe": "εμένα",
+        "YouDontHaveAccessToCreateSegments": "Δεν διαθέτετε την απαιτούμενη πρόσβαση ασφαλείας για να δημιουργείτε και να τροποποιείτε τμήματα.",
         "YouMayChangeSetting": "Εναλλακτικά, μπορείτε να αλλάξετε τη ρύθμιση στο αρχείο ρυθμίσεων (%s), ή να τροποποιήσετε το Τμήμα αυτό και να επιλέξετε '%s'.",
         "YouMustBeLoggedInToCreateSegments": "Θα πρέπει να έχετε κάνει είσοδο για να δημιουργήσετε και να επεξεργαστείτε προσαρμοσμένα τμήματα επισκεπτών."
     },
