--- a/lang/fi.json
+++ b/lang/fi.json
@@ -844,7 +844,7 @@
         "TransitionsRowActionTooltip": "Näe mitä kävijät tekivät ennen ja jälkeen tällä sivulla käymistä",
         "TransitionsRowActionTooltipTitle": "Avaa muutokset",
         "TranslatorEmail": "olli@jarva.fi, sara@alennuskoodia.fi",
-        "TranslatorName": "<a href=\"http:\/\/olli.jarva.fi\/\">Olli Jarva<\/a>, Sara",
+        "TranslatorName": "<a href=\"http:\/\/olli.jarva.fi\/\">Olli Jarva<\/a>, <a href=\"http:\/\/www.alennuskoodia.fi\/\">Sara Roshage<\/a>",
         "UniquePurchases": "Uniikit ostot",
         "Unknown": "Tuntematon",
         "Upload": "Lähetä",
@@ -1015,7 +1015,6 @@
     },
     "Installation": {
         "CollaborativeProject": "Piwik on yhteistyöprojekti, jonka parissa ovat työskennelleet ihmiset ympäri maailmaa suurella sydämellä.",
-        "CommunityNewsletter": "lähetä sähköpostia kaikista päivityksistä (uusista lisäosista, ominaisuuksista jne.)",
         "ConfigurationHelp": "Piwikin asetustiedosto on luotu väärin. Voit joko poistaa tiedoston config\/config.ini.php ja käyttää asennusohjelmaa uudelleen tai korjata tietokannan asetukset.",
         "ConfirmDeleteExistingTables": "Haluatko varmasti poistaa seuraavat taulut tietokannasta: %s? VAROITUS: TAULUJEN TIETOJA EI VOI PALAUTTAA EIKÄ POISTAMISTA VOI KUMOTA!",
         "Congratulations": "Onnittelut",
@@ -1061,7 +1060,6 @@
         "Requirements": "Piwikin vaatimukset",
         "RestartWebServer": "Käynnistä web-palvelimesi uudelleen näiden muutosten jälkeen.",
         "ReusingTables": "Taulukoiden uudelleenkäyttö",
-        "SecurityNewsletter": "lähetä sähköpostia Piwikin suurista päivityksistä ja turvallisuushälytyksistä",
         "SeeBelowForMoreInfo": "Katso alempaa lisätietoja.",
         "SetupWebsite": "Lisää verkkosivu",
         "SetupWebsiteError": "Virhe verkkosivun lisäämisessä",
