--- a/lang/ja.json
+++ b/lang/ja.json
@@ -340,7 +340,7 @@
         "YouCanUpgradeAutomaticallyOrDownloadPackage": "自動的にバージョン %s にアップデートするか、パッケージをダウンロードして手作業でインストールすることができます：",
         "YouCouldManuallyExecuteSqlQueries": "データベースのタイムアウト、ブラウザのタイムアウト、あるいはその他の問題により Piwik がアップグレードに失敗し、さらにコマンドラインアップデータを使用することができない場合は、Piwik をアップデートするために手作業で SQL クエリーを実行することができます。",
         "YouMustDownloadPackageOrFixPermissions": "Piwik が現在のインストールに上書きすることができません。 ディレクトリ／ファイルのパーミッションを修正するか、パッケージをダウンロードして手作業でバージョン %s をインストールすることができます：",
-        "YourDatabaseIsOutOfDate": "Piwik データベースが旧式のため、継続する前にアップグレードが必要です。"
+        "YourDatabaseIsOutOfDate": "Piwik データベースが古いため、継続する前にアップグレードが必要です。"
     },
     "CustomVariables": {
         "ColumnCustomVariableName": "カスタム変数名",
@@ -586,11 +586,13 @@
         "JsTrackingTag": "JavaScript トラッキングタグ",
         "Language": "言語",
         "LastDays": "最後の %s 日間(今日を含む)",
+        "LastDaysShort": "最後の %s 日間",
         "LayoutDirection": "ltr",
         "Live": "ライブ",
         "Loading": "読み込み中...",
         "LoadingData": "データ読み込み中...",
         "LoadingPopover": "ロード中 %s...",
+        "LoadingPopoverFor": "ロード中 %s のために",
         "Locale": "ja_JP.UTF-8",
         "Logout": "ログアウト",
         "LongDay_1": "月曜日",
@@ -612,7 +614,7 @@
         "LongMonth_7": "7月",
         "LongMonth_8": "8月",
         "LongMonth_9": "9月",
-        "MainMetrics": "主メトリクス",
+        "MainMetrics": "メインメトリクス",
         "Matches": "一致",
         "MediumToHighTrafficItIsRecommendedTo": "比較的トラフィックの高いウェブサイトでは、今日のリポートの処理間隔を 30分（%s 秒） または 1時間（%s 秒） に設定することをお勧めします。",
         "Metadata": "メタデータ",
@@ -623,6 +625,7 @@
         "MinutesSeconds": "%1$s 分 %2$s 秒",
         "Mobile": "モバイル",
         "Monthly": "毎月",
+        "MonthlyReport": "毎月",
         "MonthlyReports": "月次リポート",
         "More": "以上",
         "MoreDetails": "詳細",
@@ -630,6 +633,7 @@
         "MultiSitesSummary": "全ウェブサイト",
         "Name": "名前",
         "NbActions": "アクション数",
+        "NbSearches": "内部検索数",
         "NDays": "%s 日間",
         "Never": "しない",
         "NewReportsWillBeProcessedByCron": "Piwik アーカイブ処理がブラウザによる表示をトリガーとしない場合、新しいリポートは crontab によって処理されます。",
@@ -637,6 +641,7 @@
         "NewVisitor": "新規ビジター",
         "NewVisits": "新規ビジット",
         "Next": "次へ",
+        "NMinutes": "%s 分",
         "No": "いいえ",
         "NoDataForGraph": "このグラフのデータはありません。",
         "NoDataForTagCloud": "このタグクラウドのデータはありません。",
@@ -649,6 +654,7 @@
         "NumberOfVisits": "訪問数",
         "NVisits": "%s ビジット",
         "Ok": "OK",
+        "OneAction": "1アクション",
         "OneDay": "1日",
         "OneMinute": "1分",
         "OneVisit": "1ビジット",
@@ -659,8 +665,13 @@
         "OperationAtLeast": "少なくとも",
         "OperationAtMost": "最大で",
         "OperationContains": "含む",
-        "OperationIs": "で",
+        "OperationDoesNotContain": "含まれていない",
+        "OperationEquals": "等しい",
+        "OperationGreaterThan": "より大きい",
+        "OperationIs": "である",
         "OperationIsNot": "ではありません",
+        "OperationLessThan": "以下",
+        "OperationNotEquals": "等しくない",
         "OptionalSmtpPort": "オプションです。 非暗号化と TLS SMTP では 25 が、SSL SMTP では 465 がデフォルトになります。",
         "Options": "オプション",
         "OrCancel": "または %s キャンセル %s",
@@ -683,6 +694,7 @@
         "PoweredBy": "Powered by",
         "Previous": "前へ",
         "PreviousDays": "以前の %s 日間(今日は含まない)",
+        "PreviousDaysShort": "以前の %s 日間",
         "Price": "価格",
         "ProductConversionRate": "製品のコンバージョン率",
         "ProductRevenue": "製品の収益",
@@ -760,8 +772,8 @@
         "TotalRevenue": "総収益",
         "TransitionsRowActionTooltip": "訪問者が、このページの表示前後に何をしていたか見てください",
         "TransitionsRowActionTooltipTitle": "トランジションを開く",
-        "TranslatorEmail": "imagine@drupal.jp",
-        "TranslatorName": "Takafumi\/Drupal Japan - http:\/\/drupal.jp",
+        "TranslatorEmail": "hello@piwik.org",
+        "TranslatorName": "Takafumi\/Drupal Japan - http:\/\/drupal.jp Takeshi Ueda\/Piwik Japan Team - http:\/\/piwikjapan.org",
         "UniquePurchases": "ユニークな購入",
         "Unknown": "不明",
         "Upload": "アップロード",
@@ -901,10 +913,25 @@
         "PluginDescription": "Piwikリポートの美しい静的PNGグラフ画像を生成します。"
     },
     "Insights": {
-        "DayComparedToPreviousDay": "前の日"
+        "ControlComparedToDescription": "比較する実績値は",
+        "DayComparedToPreviousDay": "前の日",
+        "DayComparedToPreviousWeek": "前週の同じ日",
+        "DayComparedToPreviousYear": "去年の同じ日",
+        "Filter": "フィルター",
+        "FilterIncreaserAndDecreaser": "増加と減少した値",
+        "FilterOnlyDecreaser": "減少した値のみ",
+        "FilterOnlyDisappeared": "消失した値のみ",
+        "FilterOnlyIncreaser": "増加した値のみ",
+        "FilterOnlyMovers": "変化のあった値のみ",
+        "FilterOnlyNew": "新しい値のみ",
+        "MonthComparedToPreviousMonth": "前の月",
+        "MonthComparedToPreviousYear": "去年の同じ月",
+        "OverviewWidgetTitle": "インサイトの概要",
+        "WeekComparedToPreviousWeek": "前の週",
+        "WidgetCategory": "インサイト",
+        "YearComparedToPreviousYear": "前の年"
     },
     "Installation": {
-        "CommunityNewsletter": "コミュニティアップデート（新しいプラグイン、新機能等）がある場合に、自分宛にメールを送信",
         "ConfigurationHelp": "Piwik 設定ファイルが誤設定されているようです。 config\/config.ini.php を削除してインストールを再開するか、データベースの接続設定を修正してください。",
         "ConfirmDeleteExistingTables": "本当にデータベースからテーブル %s を削除しますか？ 警告： これらのテーブルのデータを復旧することはできません！",
         "Congratulations": "おめでとうございます",
@@ -927,6 +954,7 @@
         "LargePiwikInstances": "高トラフィック環境で Piwik を使用するためのヒント",
         "Legend": "説明",
         "NoConfigFound": "Piwik の設定ファイルを見つけることができませんでしたが、あなたは Piwik ページにアクセスしようとしています。<br \/><b>  »<a href='index.php'>ただちに Piwik をインストール<\/a>することができます。<\/b><br \/><small>以前に Piwik をインストールしたことがあり、DB に多少のデータがある場合でも心配しないでください。 既存のデータを保持したまま、同じテーブルを再利用することができます！<\/small>",
+        "NotSupported": "サポートされていません",
         "Optional": "オプション",
         "Password": "パスワード",
         "PasswordDoNotMatch": "パスワードが一致しませんでした",
@@ -936,7 +964,6 @@
         "PluginDescription": "Piwik のインストール処理を行います。 インストールは通常1回のみですが、設定ファイル（config\/config.inc.php）が削除された場合は、インストールが再度開始されます。",
         "Requirements": "Piwik の動作環境",
         "RestartWebServer": "この変更を行った後、ウェブサーバーを再起動してください。",
-        "SecurityNewsletter": "Piwik にメジャーアップグレードやセキュリティ警告がある場合に、自分宛にメールを送信",
         "SetupWebsite": "ウェブサイトのセットアップ",
         "SetupWebsiteError": "ウェブサイトを追加する際にエラーが発生しました",
         "SetupWebSiteName": "ウェブサイトの名前",
@@ -1141,6 +1168,7 @@
         "SearchEngines": "検索エンジン",
         "SearchEnginesDocumentation": "検索エンジンを参照してウェブサイトに来たビジター。詳細のリポートは %s こちら %s",
         "SearchEnginesReportDocumentation": "このリポートは、どの検索エンジンがこのウェブサイトにユーザーを呼びこんだかを示しています。 %s テーブル内の行をクリックすると、ユーザーが特定の検索エンジンを使って何を検索していたかを確認できます。",
+        "Socials": "ソーシャルネットワーク",
         "SubmenuSearchEngines": "検索エンジンとキーワード",
         "SubmenuWebsites": "ウェブサイト",
         "Type": "参照元タイプ",
@@ -1280,6 +1308,7 @@
         "BouncesInline": "%s のバウンス"
     },
     "UserCountry": {
+        "City": "都市",
         "Continent": "大陸",
         "continent_afr": "アフリカ",
         "continent_amc": "中央アメリカ",
@@ -1568,7 +1597,7 @@
         "Geolocation": "ジオロケーション",
         "ISPDatabase": "ISP データベース",
         "Latitude": "緯度",
-        "Location": "位置",
+        "Location": "場所",
         "LocationDatabase": "ロケーションデータベース",
         "LocationProvider": "ロケーションプロバイダ",
         "Longitude": "経度",
@@ -1576,7 +1605,7 @@
         "OrgDatabase": "組織のデータベース",
         "PluginDescription": "ビジターの国をリポートします。",
         "Region": "地域",
-        "SubmenuLocations": "位置"
+        "SubmenuLocations": "場所"
     },
     "UserCountryMap": {
         "Cities": "都市",
