--- a/lang/nl.json
+++ b/lang/nl.json
@@ -185,6 +185,7 @@
         "DonateCall3": "Als u vindt dat Piwik een grote hulp is voor uw zaak, %1$s overweeg dan een donatie!%2$s",
         "DonateFormInstructions": "Klik op de schuifbalk om een bedrag te selecteren, en klik dan subscribe om te doneren.",
         "ExcludeRowsWithLowPopulation": "Alle rijen worden getoond %s Verberg de rijen met een lage populatie",
+        "ExternalHelp": "Help (opent in een nieuw tabblad)",
         "FlattenDataTable": "De rapportweergave is hierarchisch %s Maak het vlak",
         "HowMuchIsPiwikWorth": "Hoeveel is Piwik waard voor jouw?",
         "IncludeRowsWithLowPopulation": "Rijen met een lage populatie zijn verborgen %s Laat alle rijen zien",
@@ -282,6 +283,7 @@
         "OriginThirdParty": "Derden",
         "PluginDescription": "Plugin admin interface",
         "PluginHomepage": "Plugins",
+        "PluginKeywords": "Sleutelwoorden",
         "PluginNotCompatibleWith": "%1$s plugin is niet compatibel met %2$s.",
         "PluginsManagement": "Plugin manager",
         "PluginUpdateAvailable": "U gebruikt versie %s en een nieuwe versie %s is beschikbaar.",
@@ -346,12 +348,16 @@
         "NoteForLargePiwikInstances": "Belangrijke mededeling voor grote Piwik installaties",
         "NoteItIsExpectedThatQueriesFail": "Opmerking: Als u deze query's handmatig uitvoert zullen sommigen niet kunnen worden uitgevoerd. In dat geval kunt u de fouten negeren en de volgende in de lijst uitvoeren.",
         "NotificationClickToUpdatePlugins": "Klik hier om nu uw plugins bij te werken:",
+        "NotificationClickToUpdateThemes": "Klik hier om je thema's nu bij te werken:",
+        "NotificationSubjectAvailableCoreUpdate": "Nieuwe Piwik %s is beschikbaar",
+        "NotificationSubjectAvailablePluginUpdate": "Updates beschikbaar voor uw Piwik plugins",
         "PiwikHasBeenSuccessfullyUpgraded": "Piwik upgrade was succesvol!",
         "PiwikUpdatedSuccessfully": "Piwik is succesvol geüpdatet!",
         "PiwikWillBeUpgradedFromVersionXToVersionY": "Piwik Database zal ge-upgrade worden van versie %1$s naar de nieuwe versie %2$s",
         "PluginDescription": "Piwik updating mechanisme",
         "ReadyToGo": "Klaar om te starten?",
         "TheFollowingPluginsWillBeUpgradedX": "De volgende plugins zullen ge-upgrade worden: %s.",
+        "ThereIsNewPluginVersionAvailableForUpdate": "Somige plugins die u gebruikt zijn bijgewerkt op de Marktplaats:",
         "ThereIsNewVersionAvailableForUpdate": "Er is een nieuwe versie van Piwik beschikbaar als update",
         "TheUpgradeProcessMayFailExecuteCommand": "Als u een grote Piwik database heeft, dan kunnen de updates te lang duren om in de browser te worden uitgevoerd. In dat geval, kunt u de updates uitvoeren vanaf de opdrachtprompt: %s",
         "TheUpgradeProcessMayTakeAWhilePleaseBePatient": "De upgrade kan enige tijd in beslag nemen, graag uw geduld.",
@@ -770,6 +776,7 @@
         "Seconds": "%ss",
         "SeeAll": "Bekijk alles",
         "SeeTheOfficialDocumentationForMoreInformation": "Zie de %sofficiële documentatie%s voor meer info.",
+        "Segment": "Segment",
         "SelectYesIfYouWantToSendEmailsViaServer": "Selecteer \"Ja\" als u wilt dat mail verzonden wordt via een opgegeven server in plaats van de lokale mail functie.",
         "Settings": "Instellingen",
         "Shipping": "Verzending",
@@ -977,13 +984,13 @@
         "MonthComparedToPreviousMonth": "vorige maand",
         "MonthComparedToPreviousYear": "zelfde maand vorig jaar",
         "NoResultMatchesCriteria": "Er komen geen rijen overeen met de criteria",
+        "TitleRowNewDetails": "'%1$s' is toegenomen met %2$s en is nieuw vergeleken met %3$s.",
         "WeekComparedToPreviousWeek": "vorige week",
         "WidgetCategory": "Inzichten",
         "YearComparedToPreviousYear": "vorig jaar"
     },
     "Installation": {
         "CollaborativeProject": "Piwik is een samenwerkingsproject, met liefde gebouwd door mensen van over de hele wereld.",
-        "CommunityNewsletter": "stuur mij e-mails met community updates (nieuwe plugins, nieuwe features, enz.)",
         "ConfigurationHelp": "Uw Piwik configuratie bestand is waarschijnlijk niet correct geconfigureerd. U kunt ofwel config\/config.ini.php verwijderen en de installatie vervolgen of de toegangsgegevens voor de database corrigeren.",
         "ConfirmDeleteExistingTables": "Bent u zeker dat u de tabellen wilt verwijderen: %s uit uw datbase? WAARSCHUWING: DATA VAN DEZE TABELLEN KAN NIET WORDEN HERSTELD!",
         "Congratulations": "Gefeliciteerd",
@@ -1017,6 +1024,7 @@
         "NfsFilesystemWarningSuffixAdmin": "Dit betekent dat Piwik extreem traag zal zijn bij gebruik van bestands gebaseerde sessies.",
         "NfsFilesystemWarningSuffixInstall": "Gebruik maken van bestands gebaseerde sessies op NFS is extreem traag, dus zal Piwik gebruik maken van database sessies. Indien je veel gelijktijdige dashboard gebruikers hebt, zul je mogelijk het maximum aantal client connecties naar de database server moeten verhogen.",
         "NoConfigFound": "Het Piwik configuratiebestand werd niet gevonden.<br \/><b>  » U kunt <a href='index.php'>Piwik nu installeren<\/a><\/b><br \/><small>Wanneer u Piwik al eerder geïnstalleerd heeft en de Piwik tabellen reeds data bevatten: maakt u zich geen zorgen, u kunt dezelfde tabellen blijven gebruiken en uw bestaande data behouden!<\/small>',",
+        "NotSupported": "niet ondersteund",
         "Optional": "Optioneel",
         "Password": "wachtwoord",
         "PasswordDoNotMatch": "wachtwoord komt niet overeen",
@@ -1027,7 +1035,6 @@
         "Requirements": "Piwik vereisten",
         "RestartWebServer": "Herstart uw webserver na deze aanpassing.",
         "ReusingTables": "Hergebruik de tabellen",
-        "SecurityNewsletter": "stuur mij e-mails over grote Piwik upgrades en beveiligingswaarschuwingen",
         "SeeBelowForMoreInfo": "Zie hieronder voor meer informatie.",
         "SetupWebsite": "Configureer een website",
         "SetupWebsiteError": "Er heeft zich een fout voorgedaan tijdens het toevoegen van de website",
@@ -1071,7 +1078,7 @@
         "SystemCheckSplHelp": "U moet PHP opnieuw configureren en compileren met de standard PHP LIbrary (SPL) ingeschakeld (standaard)",
         "SystemCheckSummaryNoProblems": "Hoera! Er zijn geen problemen met je Piwik setup. Geef jezelf een schouderklopje.",
         "SystemCheckSummaryThereWereErrors": "Oeps! Piwik heeft enkele %1$skritieke problemen%2$s gedetecteerd in je Piwik setup. %3$sDeze problemen zouden meteen gefixed moeten worden.%4$s",
-        "SystemCheckSummaryThereWereWarnings": "Er zijn enkele problemeb met je systeem. Piwik zal werken, maar je kunt enkele kleine problemen ervaren.",
+        "SystemCheckSummaryThereWereWarnings": "Er zijn enkele problemen met je systeem. Piwik zal werken, maar je kunt enkele kleine problemen ervaren.",
         "SystemCheckTimeLimitHelp": "Het meten van een website met veel bezoekers kan meer tijd in beslag nemen dan momenteel is toegestaan.<br \/>Controleer de directive max_execution_time in uw php.ini file indien noodzakelijk",
         "SystemCheckTracker": "Tracker status",
         "SystemCheckTrackerHelp": "GET request naar piwik.php mislukt. Probeer deze URL te whitelisten van HTTP Authentication en deactiveer mod_security (wellicht moet u dit vragen aan de beheerder van uw webserver).",
@@ -1265,6 +1272,7 @@
     "MultiSites": {
         "Evolution": "Evolutie",
         "LoadingWebsites": "Websites laden",
+        "Pagination": "%s - %s van %s",
         "PluginDescription": "Toont de multi-site uitvoering van de samenvatting\/statistieken. Momenteel onderhouden als een core plugin van Piwik.",
         "TopLinkTooltip": "Vergelijk Website statistieken van al je websites."
     },
@@ -1395,7 +1403,8 @@
         "WidgetGetAll": "Alle Referers",
         "WidgetKeywords": "Top zoektermen",
         "WidgetSocials": "Lijst van sociale netwerken",
-        "WidgetTopKeywordsForPages": "Top sleutelwoorden voor pagina URL"
+        "WidgetTopKeywordsForPages": "Top sleutelwoorden voor pagina URL",
+        "XPercentOfVisits": "%s%% van de bezoeken"
     },
     "RowEvolution": {
         "AvailableMetrics": "Beschikbare gegevens",
@@ -1472,10 +1481,12 @@
         "SegmentDisplayedAllWebsites": "alle websites",
         "SegmentDisplayedThisWebsiteOnly": "alleen deze website",
         "SegmentIsDisplayedForWebsite": "en getoond voor",
+        "SegmentNotApplied": "Segment '%s' niet toegepast",
         "SelectSegmentOfVisitors": "Selecteer een segment van bezoekers:",
         "ThisSegmentIsVisibleTo": "Dit segment is zichtbaar voor:",
         "VisibleToAllUsers": "alle gebruikers",
         "VisibleToMe": "mij",
+        "YouDontHaveAccessToCreateSegments": "U heeft niet het benodigde toegangsniveau om segmenten te maken en bewerken.",
         "YouMustBeLoggedInToCreateSegments": "Je moet ingelogd zijn om Bezoekers segmenten te bewerken of aan te maken."
     },
     "SEO": {
@@ -1532,6 +1543,7 @@
         "PiwikOffersEcommerceAnalytics": "In Piwik is een geavanceerde Ecommerce Analytics tracking & rapportage mogelijk. Leer meer over %s Ecommerce Analytics%s.",
         "PiwikWillAutomaticallyExcludeCommonSessionParameters": "Piwik sluit automatisch veelvoorkomende sessie parameters uit (%s).",
         "PluginDescription": "Websitebeheer in Piwik: Voeg een nieuwe website toe, pas een bestaande aan, toon de javascript code om te integreren in uw pagina's. Alle acties zijn ook beschikbaar via de API.",
+        "SearchKeywordParametersDesc": "Voer een komma gescheiden lijst in van alle query parameter namen die het site zoek sleutelwoord bevatten.",
         "SelectACity": "Selecteer een stad",
         "SelectDefaultCurrency": "U kunt de standaard munteenheid voor nieuwe websites ingeven.",
         "SelectDefaultTimezone": "U kunt de standaard tijdzone selecteren voor nieuwe websites.",
@@ -2179,6 +2191,7 @@
         "ExcludeVisitsViaCookie": "Sluit uw bezoeken uit met een cookie",
         "ForAnonymousUsersReportDateToLoadByDefault": "Voor anonieme gebruikers, Standaard rapport datum bij laden pagina.",
         "IfYouWouldLikeToChangeThePasswordTypeANewOne": "Als u het wachtwoord wilt wijzigen, geef dan een nieuwe op. Laat het anders leeg.",
+        "LastSeen": "Laatst gezien",
         "MainDescription": "Stel in welke gebruikers toegang hebben tot de Piwik rapporten van deze website. U kan de toegangsrechten voor alle websites tegelijk bepalen door deze optie te kiezen in de dropdown.",
         "ManageAccess": "Toegangsbeheer",
         "MenuAnonymousUserSettings": "Anonieme gebruikers instellingen",
