--- a/lang/ro.json
+++ b/lang/ro.json
@@ -104,6 +104,7 @@
         "CustomLogoHelpText": "Poţi personaliza logoul Piwik care va fi afişat în interfaţa de utilizator şi în rapoartele email.",
         "DevelopmentProcess": "In timp ce %sprocesul de dezvoltare%s include mii de teste automate, Testerii Beta au un rol esential in a-si insusi \"No bug policy\" in Piwik.",
         "EmailServerSettings": "Setările serverului email",
+        "FaviconUpload": "Alege un favicon pentru a fi încărcat",
         "ForBetaTestersOnly": "Numai pentru beta-testeri",
         "ImageTracking": "Urmărire prin imagine",
         "ImageTrackingIntro1": "Cand un visitator are dezactivat JavaScript sau cand JavaScript nu poate fi folosit, poti folosi un link de tracking de tip imagine pentru a inregistra statisticile despre vizitatori.",
@@ -859,8 +860,8 @@
         "TotalVisitsPageviewsRevenue": "Total: %s vizite, %s vizualizări de pagină, %s revenire)",
         "TransitionsRowActionTooltip": "Vezi ce au făcut vizitatorii până la şi după vizionarea acestei pagini",
         "TransitionsRowActionTooltipTitle": "Treceri Deschise",
-        "TranslatorEmail": "astonsoftware@gmail.com",
-        "TranslatorName": "astonsoftware",
+        "TranslatorEmail": "astonsoftware@gmail.com, flo[at]inboxtranslation[dot]com",
+        "TranslatorName": "astonsoftware, <a href=\"http:\/\/inboxtranslations.com\">Inbox Translation<\/a>",
         "UniquePurchases": "Cumparaturi unice",
         "Unknown": "Necunoscut",
         "Upload": "Incarca",
@@ -1039,7 +1040,6 @@
     },
     "Installation": {
         "CollaborativeProject": "Piwik este un proiect colaborativ, construit cu dragoste de oameni de pe tot mapamondul.",
-        "CommunityNewsletter": "da-mi un e-mail cu noutatile din comunitate (noi plugin-uri, caracteristici, etc)",
         "ConfigurationHelp": "Fisierul de configurare Piwik pare să fie configurat greșit. Puteți fie să eliminați config \/ config.ini.php și reluati instalarea, sau a se corecta setările de conexiune de date.",
         "ConfirmDeleteExistingTables": "Sigur doriți să ștergeți tabelele: %s din baza de date? AVERTISMENT: DATELE DIN ACESTE TABELE NU POT FI RECUPERATE",
         "Congratulations": "Felicitari",
@@ -1073,6 +1073,7 @@
         "NfsFilesystemWarningSuffixAdmin": "Acest lucru înseamnă că Piwik va fi extrem de lent atunci când se utilizează sesiuni bazate pe fișiere.",
         "NfsFilesystemWarningSuffixInstall": "Folosind sesiuni bazate pe fișiere NFS sunt extrem de lente, astfel Piwik va folosi sesiuni de baze de date. Dacă aveți mai mulți utilizatori de tablou de bord, ar putea fi necesar sa se creasca numărul maxim de conexiuni client la serverul de baze de date.",
         "NoConfigFound": "Fișierul de configurare Piwik nu a putut fi găsit și se încearcă să se acceseze o pagină Piwik.<br \/><b> » Puteți a href='index.php'> instala Piwik acum <\/a><\/b><br \/><mic> Dacă ați instalat Piwik înainte și au aveti unele tabele din DB , nu vă faceți griji, aveți posibilitatea să reutilizați aceleași tabele și să se păstreze datele existente!<\/mic>",
+        "NotSupported": "nu sunt acceptate",
         "Optional": "Opţional",
         "Password": "password",
         "PasswordDoNotMatch": "Parola nu se potriveste",
@@ -1083,7 +1084,6 @@
         "Requirements": "Piwik Cerințe",
         "RestartWebServer": "Dupa ce faci aceasta schimbare, reporniți serverul de web.",
         "ReusingTables": "Reutilizare Tabele",
-        "SecurityNewsletter": "Trimite-mi e-mail cu upgrade-uri majore Piwik și alerte de securitate",
         "SeeBelowForMoreInfo": "Vezi mai jos pentru mai multe informații.",
         "SetupWebsite": "Setup a website",
         "SetupWebsiteError": "A fost o eroare atunci când s-a adăugart website-ul",
@@ -1099,6 +1099,8 @@
         "SystemCheck": "System check",
         "SystemCheckAutoUpdateHelp": "Notă: Un singur click pe Piwik pentru actualizare se necesită scrie-permisiune la folderul Piwik și conținutul său.",
         "SystemCheckCreateFunctionHelp": "Piwik foloseste functii anonime pentru callback.",
+        "SystemCheckCronArchiveProcess": "Arhiva Cron",
+        "SystemCheckCronArchiveProcessCLI": "Administrarea proceselor via CLI",
         "SystemCheckDatabaseHelp": "Piwik necesită fie extensia mysqli sau ambele extensiile DOP și PDO_MYSQL .",
         "SystemCheckDebugBacktraceHelp": "Vezi :: fabrica nu va fi capabila sa creeze vizualizări pentru modulul de asteptare.",
         "SystemCheckError": "A apărut o eroare - trebuie să fie reparata înainte de a continua",
@@ -1329,6 +1331,7 @@
     "MultiSites": {
         "Evolution": "Evoluţie",
         "LoadingWebsites": "încărcare site-uri web",
+        "Pagination": "%s - %s of %s",
         "PluginDescription": "Afișează multi-site-ul rezumat executiv \/ statistici. În prezent, se menține o bază Piwik plugin.",
         "TopLinkTooltip": "Compara statisticiLE Web Analytics pentru toate site-urile dvs.."
     },
@@ -1558,6 +1561,7 @@
         "ThisSegmentIsVisibleTo": "Acest segment este vizibil către:",
         "VisibleToAllUsers": "tuturor utilizatorilor",
         "VisibleToMe": "mie",
+        "YouDontHaveAccessToCreateSegments": "Nu ai nivelul de acces necesar pentru a crea și edita segmente.",
         "YouMayChangeSetting": "Alternativ, puteți schimba setările în fișierul de configurare (%s), sau pentru a edita acest segment și alegeți '%s'.",
         "YouMustBeLoggedInToCreateSegments": "Trebuie să fii logat pentru a crea și edita segmente de vizitatori personalizate."
     },
