--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -103,6 +103,7 @@
         "CustomLogoHelpText": "您可以定制 Piwik 图标，显示在用户界面和报表邮件上。",
         "DevelopmentProcess": "虽然在%s开发过程%s中已进行过成千上万次的自动测试，Beta 版本测试仍然是实现 Piwik \"无错理念\"的很重要的一部分。",
         "EmailServerSettings": "邮件服务器设置",
+        "FaviconUpload": "选择上传图标",
         "ForBetaTestersOnly": "仅供测试",
         "ImageTracking": "图片跟踪",
         "ImageTrackingIntro1": "当访客禁用 JavaScript 或者无法使用 JavaScript 时，您也可以使用图片跟踪链接来统计访客。",
@@ -183,6 +184,7 @@
         "DonateCall3": "如果 Piwik 对您的业务有很大帮助，%1$s 请考虑捐助!%2$s",
         "DonateFormInstructions": "点击下面的滑动条设定金额，然后点 Subscribe 按钮捐款",
         "ExcludeRowsWithLowPopulation": "显示了所有的数据 %s 不显示低密度数据",
+        "ExternalHelp": "帮助（在新标签页打开）",
         "FlattenDataTable": "本报表已分级显示 %s 改为不分级显示",
         "HowMuchIsPiwikWorth": "您觉得 Piwik 值多少?",
         "IncludeRowsWithLowPopulation": "没有显示低密度数据 %s 显示所有数据",
@@ -291,6 +293,7 @@
         "StepUnzippingPlugin": "正在解压插件",
         "StepUnzippingTheme": "正在解压布景",
         "Support": "支持",
+        "TeaserExtendPiwik": "使用插件主题来扩展Piwik",
         "Theme": "主题",
         "Themes": "主题",
         "ThemesDescription": "主题可以改变Piwik外观，提供一个全新的视觉体验，让您享受分析报告。",
@@ -330,6 +333,7 @@
         "MajorUpdateWarning2": "下面的建议对大型网站很重要。",
         "NoteForLargePiwikInstances": "大型 Piwik 网站重要注意事项",
         "NoteItIsExpectedThatQueriesFail": "注意: 如果您手动执行这些查询，预计当中会有一些错误。在此情況下，只需忽略错误，然后执行以下列表。",
+        "NotificationClickToUpdatePlugins": "点击这里更新你的插件：",
         "PiwikHasBeenSuccessfullyUpgraded": "Piwik 升级成功！",
         "PiwikUpdatedSuccessfully": "Piwik 升级成功！",
         "PiwikWillBeUpgradedFromVersionXToVersionY": "Piwik 数据库将从版本 %1$s 升级到新版本 %2$s。",
@@ -945,7 +949,6 @@
         "PluginDescription": "为 Piwik 统计报表生成漂亮的PNG图片。"
     },
     "Installation": {
-        "CommunityNewsletter": "订阅社区更新的邮件通知(如: 新插件、新功能等。)",
         "ConfigurationHelp": "您的 Piwik 配置文件可能出错了，您可以删除 config\/config.ini.php 然后继续安裝，或者改正数据库的参数设定。",
         "ConfirmDeleteExistingTables": "您确定要从您的数据库中删除表: %s吗？警告: 删除的表中的数据无法恢复！",
         "Congratulations": "恭喜您",
@@ -988,7 +991,6 @@
         "PluginDescription": "Piwik 的安裝程序。通常只需要安裝一次。如果配置文件 config\/config.inc.php 被刪除，那么将会重新安裝。",
         "Requirements": "Piwik 需求",
         "RestartWebServer": "做过这个改动之后，请重新启动网络服务器。",
-        "SecurityNewsletter": "寄给我重要的 Piwik 更新与安全性警告电子邮件通知",
         "SeeBelowForMoreInfo": "更详细的信息请看下面",
         "SetupWebsite": "设定一个网站",
         "SetupWebsiteError": "增加此网站时出现错误",
